tweak CSS of sized panel to avoid issues with floats and wrapping

--- a/src/frontendMain/resources/css/micromon.css
+++ b/src/frontendMain/resources/css/micromon.css
@@ -1124,15 +1124,19 @@ div.tomo-sized-panel {
 
 div.sized-panel div.buttons {
 	line-height: 40px;
+	display: flex;
+	flex-direction: row;
+	gap: 10px;
 }
 
 div.sized-panel div.buttons div.title {
 	font-size: 20px;
 	font-weight: bold;
+	flex-grow: 1;
 }
 
 div.sized-panel div.buttons div.right {
-	float: right;
+	/* nothing needed here anymore */
 }
 
 div.sized-panel img {
